--- a/grub.cfg
+++ b/grub.cfg
@@ -96,11 +96,41 @@ export linux_gfx_mode
 
 
 
-menuentry 'NetBSD stable' { 
-insmod ufs2
-set root=(hd0,2)
-multiboot /netbsd -c console=pc  root=wd0f  
+
+
+menuentry 'Part2 100GB Good Stable FreeBSD Unix without X11 on ada0s2a' { 
+	set root=(hd0,msdos2)
+	chainloader +1
 }
+
+
+menuentry 'Part1 100GB Tiny Grub Boot with Linux Devuan GNU/Linux sda1' --class devuan --class gnu-linux --class gnu { 
+	set root='hd0,msdos1'
+	linux	/boot/vmlinuz-4.9.0-6-686-pae root=/dev/sda1 rw 
+	initrd	/boot/initrd.img-4.9.0-6-686-pae
+}
+
+menuentry 'Part3 100GB NetBSD 8.1 (fast but unstable with X11) stable part3 wd0a' { 
+insmod ufs2
+set root=(hd0,3)
+multiboot /netbsd -c console=pc  root=wd0a 
+}
+
+menuentry 'Part4 500GB FreeBSD stable ada0s4a with KDE' { 
+insmod ufs2
+set root=(hd0,msdos4)
+chainloader +1
+}
+
+
+
+
+menuentry 'KDE Desktop Linux Devuan GNU/Linux sda3' --class devuan --class gnu-linux --class gnu { 
+	set root=(hd0,msdos3)
+	linux	/boot/vmlinuz-4.9.0-6-686-pae root=/dev/sda3   rw 
+	initrd	/boot/initrd.img-4.9.0-6-686-pae
+}
+
 
 
 
@@ -119,15 +149,6 @@ multiboot /netbsd9  -c console=pc  root=wd0g
 
 
 
-menuentry 'Linux Devuan GNU/Linux sda1' --class devuan --class gnu-linux --class gnu { 
-	load_video
-	insmod gzio
-	insmod part_msdos
-	insmod ext2
-	set root='hd0,msdos1'
-	linux	/boot/vmlinuz-4.9.0-6-686-pae root=/dev/sda1 rw 
-	initrd	/boot/initrd.img-4.9.0-6-686-pae
-}
 
 
 menuentry 'Linux Live KDE on sda4' --class devuan --class gnu-linux --class gnu { 
@@ -144,12 +165,6 @@ menuentry 'Linux Live KDE on sdb1' --class devuan --class gnu-linux --class gnu 
 }
 
 
-
-
-menuentry 'Unstable FreeBSD Unix Operating System on ada0s3a' { 
-	set root=(hd0,3)
-	chainloader +1
-}
 
 
 
